--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,183 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.mainContainer {
+  font-family: 'Montserrat', sans-serif;
+  width: 95%;
+  margin: 20px auto;
+  display: grid;
+  grid-template-columns: .8fr 1.2fr .8fr;  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+select {
+  height: 1.5em;
+  border-radius: 5px;
+  border: none;
+  color: #222222
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+input {
+  height: 1.5em;
+  border-radius: 5px;
+  border: none;
+  color: #222222
+}
+
+h2 {
+  color: rgb(72, 72, 185)
+}
+
+
+/* Current Order Info*/
+
+.currentOrderInfo {
+  width: 100%;
+  border-radius: 10px;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 10px;
+  row-gap: 10px;
+  background-color: rgb(174, 215, 218);
+  flex-shrink: 1;
+  box-shadow: 10px 10px 5px grey; 
+}
+
+
+/* Current Order List */
+
+.currentOrderList {
+  width: 100%;
+  border-radius: 10px;
+  padding: 20px;
+  border: none;
+  display: grid;
+  grid-template-columns: 2fr .5fr .5fr 1fr;
+  row-gap: 10px;
+  flex-shrink: 1; 
+}
+
+.currentOrderList input {
+  border: 1px solid gray;
+  width: 80%
+  
+}
+
+.previous {
+  color: red;
+  font-weight: bold;
+}
+
+.addAProductToCart {
+  width: 100%;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px 0px;
+  background-color: #eeeeee;
+  display: grid;
+  grid-template-columns: 3fr 2fr 1fr;
+  column-gap: 10px;
+  flex-shrink: 1; 
+}
+
+/* Order Command Line */
+
+.orderCommandLine {
+  width: 100%;
+  border: 1px solid lightgrey;
+  padding: 3px;
+  display: grid;
+  grid-template-columns: 1fr;
+  flex-shrink: 1;
+  background-color: none;
+}
+
+.orderCommand::placeholder  {
+  color: #cccccc
+}
+
+
+/* Order Entry Button */
+
+.orderEntryButtons {
+  width: 100%;
+  border-radius: 10px;
+  margin: 5px 0;
+  padding: 10px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 10px;
+  row-gap: 10px;
+  background-color: rgb(174, 215, 218);
+  flex-shrink: 1;
+  box-shadow: 10px 10px 5px grey;
+}
+
+.orderEntryButtons button {
+  height: 30px;
+  font-size: 1.1em;
+  border: none;
+  border-radius: 5px;
+  background-color: rgb(42, 156, 190);
+  color: white
+
+}
+
+
+/* Calendar Container */
+.calendarContainer, .centralContainer, .rightContainer {
+  margin: 20px 20px;
+  
+}
+
+.calendarApp {
+  box-shadow: 10px 10px 5px grey;
+  padding: 10px;
+  border-radius: 10px;
+  border: 1px solid gray;
+ 
+}
+
+/* Central Container*/
+
+/* Right Container */
+
+
+
+.recentOrdersList {
+  border: 1px solid grey;
+  padding: 10px 20px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  box-shadow: 10px 10px 5px grey;
+  
+}
+
+
+.recentOrderList {
+  text-align: left;
+  box-sizing: border-box;
+  height: 15px;
+  width: 100%;
+  margin: 10px 0;
+  font-size: 1em;
+  border: none;
+  border-radius: 5px;
+  background-color: white;
+  color: black;
+}
+
+
+.recentOrderListButton {
+  box-sizing: border-box;
+  height: 30px;
+  width: 100%;
+  margin: 10px 0;
+  font-size: 1.2em;
+  border: none;
+  border-radius: 5px;
+  background-color: rgb(42, 156, 190);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  box-shadow: 10px 10px 5px grey;
 }
